inou/prp/tests/errors/cast_string_runtime.prp
/*
:name: cast_string_runtime
:type: error
:error: needs a compile-time value
*/

// `string(...)` has no hardware form — a runtime signal cannot be converted to a
// string. Only compile-time values may be stringified.
comb cast_string_runtime(a:u8) -> (z:u8) {
  mut s = string(a)
  z = 0
}
